--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -532,13 +532,15 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
 
-                                        <Button Grid.Column="0" x:Name="receiveButton" Click="ReceiveButton_Click"  Padding="2" FontWeight="Bold" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White">
+                                        <Button Grid.Column="0" x:Name="receiveButton" Click="ReceiveButton_Click"  Padding="2" FontWeight="Bold" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White"
+                                                Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3">
                                             <Grid Width="150">
                                                 <materialDesign:PackIcon Kind="InboxArrowDown" VerticalAlignment="Center" Height="20" Width="25"/>
                                                 <TextBlock HorizontalAlignment="Center" Text="RECEIVE" FontFamily="Champagne &amp; Limousines"/>
                                             </Grid>
                                         </Button>
-                                        <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Bold" Margin="10,0,0,0"  >
+                                        <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Bold" Margin="10,0,0,0"  
+                                                Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3">
                                             <Grid Width="150">
                                                 <materialDesign:PackIcon Kind="Send" VerticalAlignment="Center" Height="20" Width="25"/>
                                                 <TextBlock HorizontalAlignment="Center" Text="SEND" FontFamily="Champagne &amp; Limousines"/>
