--- a/src/XelsDesktopWalletApp/Views/Pages/AdvancedPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/AdvancedPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AdvancedPage">
@@ -125,19 +126,46 @@
                         </StackPanel>
                     </Grid>
                 </StackPanel>
-                <StackPanel Name="ExtendedPublicKeySP" Orientation="Vertical" Margin="0,0,10,10" Grid.Column="1">
-                    <Grid Name="ExtendedPublicKeyGrid" Height="460" Background="WhiteSmoke" Margin="0,20,5,0" HorizontalAlignment="Left">
-                        <StackPanel Orientation="Vertical" Margin="50,50,50,0" HorizontalAlignment="Left"  >
-                            <Label Content="EXTENDED PUBLIC KEY" Height="89"  Foreground="Black"
+
+                <StackPanel Background="WhiteSmoke" Name="ExtendedPublicKeySP" Orientation="Vertical" Margin="0,0,10,10" Grid.Column="1">
+                    <Grid Name="ExtendedPublicKeyGrid" Margin="0,20,50,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" Content="EXTENDED PUBLIC KEY" Height="auto"  Margin="50,50,0,0"  Foreground="Black"
                                 FontFamily="Microsoft YaHei" FontSize="18" Padding="0" RenderTransformOrigin="0.502,0.463"  />
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical" Margin="50,106,50,0"  HorizontalAlignment="Right"  >
-                            <Button x:Name="CopyClipboardButton" Click="CopyToClipboard_Click" Content="Copy to clipboard" Padding="5" 
+                        <!--<StackPanel Orientation="Horizontal" Margin="50,50,0,0" HorizontalAlignment="Left"  >
+                            <Label Content="EXTENDED PUBLIC KEY" Height="auto"  Foreground="Black"
+                                FontFamily="Microsoft YaHei" FontSize="18" Padding="0" RenderTransformOrigin="0.502,0.463"  />
+                        </StackPanel>-->
+
+                        <Border CornerRadius="7" Background="Azure" Grid.Row="1" Height="auto" Margin="50,20,0,0" Padding="15,15,15,15"  HorizontalAlignment="Center" >
+
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock TextWrapping="Wrap" Grid.Row="0" x:Name="ExtPubKeyTxt" FontFamily="Microsoft YaHei Light" 
+                                        FontSize="14"  Foreground="Black" HorizontalAlignment="Center" Margin="50,0,50,20" 
+                                        Text="Something went wrong while getting your Extended Public Key." Height="60" Background="Azure"/>
+
+                                <Border Grid.Row="1"  x:Name="CopyMessage" Visibility="Collapsed"  BorderBrush="White" BorderThickness="2" Background="Green" CornerRadius="7" Height="40">
+                                    <TextBlock  Text="Address has been copied to your clipboard" TextWrapping="Wrap"   Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" />
+                                </Border>
+
+                            </Grid>
+                        </Border>
+
+                        <Button Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                                    Grid.Row="2" Width="400" x:Name="CopyClipboardButton" Click="CopyToClipboard_Click" Content="Copy" Padding="0" 
                                     TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" 
-                                    BorderThickness="0" FontSize="14" HorizontalAlignment="Right">
-                            </Button>
-                        </StackPanel>
-                        <StackPanel Orientation="Vertical" Margin="50,174,50,0"  HorizontalAlignment="Center"  >
+                                    BorderThickness="0" FontSize="14" Margin="55,10,0,0">
+                        </Button>
+
+                        <!--<StackPanel Orientation="Vertical" Margin="50,174,50,0"  HorizontalAlignment="Center"  >
                             <TextBlock  x:Name="ExtPubKeyTxt" TextWrapping="Wrap" FontFamily="Microsoft YaHei Light" 
                                         FontSize="14"  Foreground="Black" HorizontalAlignment="Center"
                                         Text="Something went wrong while getting your Extended Public Key." Height="60" />
@@ -151,7 +179,13 @@
                                 </Grid>
 
                             </Border>
-                        </StackPanel>
+                        </StackPanel>-->
+                        <!--<StackPanel >
+                            <Button x:Name="CopyClipboardButton" Click="CopyToClipboard_Click" Content="Copy to clipboard" Padding="5" 
+                                    TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" 
+                                    BorderThickness="0" FontSize="14" HorizontalAlignment="Right">
+                            </Button>
+                        </StackPanel>-->
                     </Grid>
                 </StackPanel>
 
