--- a/src/XelsCCDesktopWalletApp/Views/Pages/SendPages/SelsPage.xaml
+++ b/src/XelsCCDesktopWalletApp/Views/Pages/SendPages/SelsPage.xaml
@@ -7,63 +7,66 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SelsPage">
-    <StackPanel Background="White" Margin="100 5">
-        <Grid Background="White" Margin="10,10,10,10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <!--Address-->
-            <Border Grid.Row="0" Margin="20,0,20,0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+    <Grid x:Name="SelsPage_Send_Page">
+        <StackPanel Background="White" Margin="100 5">
+            <Grid Background="White" Margin="10,10,10,10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <!--Address-->
+                <Border Grid.Row="0" Margin="20,0,20,0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" FontSize="20" Content="To Address" Margin="0,0,0,36" />
+                        <Label Grid.Row="0" FontSize="20" Content="To Address" Margin="0,0,0,36" />
 
-                    <TextBox x:Name="textToAddress" BorderBrush="#FFC9D6C9" Margin="0,36,0,0" Grid.RowSpan="2" />
+                        <TextBox x:Name="textToAddress" BorderBrush="#FFC9D6C9" Margin="0,36,0,0" Grid.RowSpan="2" />
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-            <!--Amount-->
-            <Border Grid.Row="1" Margin="20,0,20,0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Label Grid.Row="0" FontSize="20" Content="Amount"/>
-                    <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
-                    <TextBlock x:Name="selsHidden" Text="SELS" Visibility="Hidden" />
-                </Grid>
-            </Border>
-
-
-            <Border Grid.Row="2" Margin="0 10">
-                <Grid Margin="26,0,24,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                <!--Amount-->
+                <Border Grid.Row="1" Margin="20,0,20,0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" FontSize="20" Content="Amount"/>
+                        <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
+                        <TextBlock x:Name="selsHidden" Text="SELS" Visibility="Hidden" />
+                    </Grid>
+                </Border>
 
 
-                    <Button x:Name="sendButton" FontSize="20" Click="SendButton_Click"  Content="Send Now" Padding="2" 
+                <Border Grid.Row="2" Margin="0 10">
+                    <Grid Margin="26,0,24,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+
+                        <Button x:Name="sendButton" FontSize="20" Click="SendButton_Click"  Content="Send Now" Padding="2" 
                         Background="Green"  
                         Foreground="White" Margin="0,54,0,54" Grid.ColumnSpan="2" >
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-        </Grid>
-    </StackPanel>
+            </Grid>
+        </StackPanel>
+    </Grid>
+    
 </Page>
