--- a/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/AccountCreatedUserControl.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/AccountCreatedUserControl.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="XelsPCHDesktopWalletApp.Views.Pages.Modals.DisplayMessageUserControl"
+﻿<UserControl x:Class="XelsPCHDesktopWalletApp.Views.Pages.Modals.AccountCreatedUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:XelsPCHDesktopWalletApp.Views.Pages.Modals"
-             mc:Ignorable="d" BorderThickness="1"   >
-    <!--d:DesignHeight="450" d:DesignWidth="800"-->
-    <Grid x:Name="Success_Message">
-        <Rectangle Fill="DarkGray" Opacity=".7" MouseDown="Rectangle_MouseDown" />
+             mc:Ignorable="d" BorderThickness="1">
+
+    <Grid x:Name="Succeded_Message">
+        <Rectangle Fill="DarkGray" Opacity=".7"/>
         <Border CornerRadius ="8" Background="White" Height="100" Width="350" BorderBrush="Green" BorderThickness="1.5">
             <Grid>
                 <Grid.RowDefinitions>
@@ -20,7 +20,5 @@
                         Click="Button_Close_Modal">Ok</Button>
             </Grid>
         </Border>
-
-
     </Grid>
 </UserControl>
